# mcp_henry_masterclass

./: -- SQLite.sql  .gitignore  README.md  pyproject.toml
scripts/: consulta_tickets_urgentes.sql  setup_db.py
src/: mcp_server.py
